plugins {
    id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
    id "net.mrjulsen.mod-build-tools" version "1.0.5"
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = "$rootProject.minecraft_version${rootProject.release_channel != "release" ? "-$rootProject.release_channel" : ""}-$rootProject.mod_version"
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        maven { url = "file://${System.getProperty('user.home')}/.m2/github/modsrepo/maven" } // Local
        maven { url = 'https://maven.neoforged.net/releases' } // NeoForge
        maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // Forge Config API
        maven { url = "https://maven.parchmentmc.org" } // ParchmentMC
        maven { url = "https://maven.terraformersmc.com/" } // ModMenu
        maven { url = "https://maven.tterrag.com/" } // Flywheel, Registrate
        maven { url = "https://maven.shedaniel.me/" } // Cloth Config, REI
        maven { url = "https://maven.blamejared.com/" } // JEI
        maven { url = "https://maven.quiltmc.org/repository/release" } // Quilt Mappings
        maven { url = "https://api.modrinth.com/maven" } // LazyDFU
        maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
        maven { url = "https://mvn.devos.one/snapshots/" } // Create, Porting Lib, Forge Tags, Milk Lib, Registrate
        maven { url = "https://mvn.devos.one/releases/" } // Porting Lib
        maven { url = "https://maven.jamieswhiteshirt.com/libs-release" } // Reach Entity Attributes
        maven { url = "https://jitpack.io/" } // Mixin Extras, Fabric ASM
        maven { url = "https://maven.blamejared.com" } // Embeddium
        maven { url = "https://api.modrinth.com/maven" } // Modrinth
        maven { url = "https://dvs1.progwml6.com/files/maven/" } // JEI
        maven { url = "https://maven.blamejared.com/" } // JEI
        maven { url = "https://modmaven.dev" } // JEI
        maven { url = "https://cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }
        maven {
            name = 'GeckoLib'
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
            content {
                    includeGroupByRegex("software\\.bernie.*")
                    includeGroup("com.eliotlash.mclib")
            }
        }
        maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
        maven { url = "https://maven.tterrag.com" } // Registrate
        maven { url = "https://maven.mrjulsen.net" } // DragonLib
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.minecraft_version}:${rootProject.parchment_version}@zip")
        }
    }

    processResources {
        def expandProps = [
            "version": version,
            "minecraft_version": rootProject.minecraft_version,
            "issues": rootProject.issues,
            "source": rootProject.source,
            "license": rootProject.license,
            "modid": rootProject.archives_name,
            "display_name": rootProject.display_name,
            "homepage": rootProject.homepage,
            "authors": rootProject.authors,
            "description": rootProject.description,
            "icon": rootProject.icon,
            "discord": rootProject.discord,
            "next_unsupported_minecraft_version": rootProject.next_unsupported_minecraft_version,
            "dragonlib_version": "$rootProject.minecraft_version-$rootProject.dragonlib_version",
            "neoforge_dependency_version": rootProject.neoforge_dependency_version,
            "neoforge_loader_version": rootProject.neoforge_loader_version,
            "fabric_loader_version": rootProject.fabric_loader_version,
            "java_version": rootProject.java_version,
            "maven_group": rootProject.maven_group,
            "create_neoforge_version": rootProject.create_neoforge_version,
            "create_neoforge_dependency_version": rootProject.create_neoforge_dependency_version,
            "main_class_name": rootProject.main_class_name,
            "geckolib_minecraft_version": rootProject.geckolib_minecraft_version,
            "geckolib_fabric_version": rootProject.geckolib_fabric_version,
            "geckolib_neoforge_version": rootProject.geckolib_neoforge_version
        ]
        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', 'pantographsandwires.mixins.json']) {
            expand expandProps
        }
        inputs.properties(expandProps)
        exclude ".cache" // Remove cache from generated data
    }

    java {
        withSourcesJar()
        withJavadocJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    jar {
        manifest {
            attributes([
                    "Specification-Title"     : "${rootProject.display_name}",
                    "Specification-Vendor"    : "${rootProject.authors}",
                    "Specification-Version"   : "1",
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : project.jar.archiveVersion,
                    "Implementation-Vendor"   : "${rootProject.authors}",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
            ])
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }
    }
}

modBuildTools {
    publish {
        localRepoDir = "${System.getProperty('user.home')}/.m2/github/modsrepo/maven"
        s3Bucket = "maven"
        endpointEnv = "MAVEN_ENDPOINT"
        accessKeyEnv = "MAVEN_ACCESS_KEY"
        secretKeyEnv = "MAVEN_SECRET_KEY"
        publishCommon = false
    }
    javadoc {
        title = "Create Pantographs and Wires ${release_channel}-${mod_version}"
        tags = [
                "apiNote:a:API Note:",
                "implNote:a:Impl Note:",
                "implSpec:a:Impl Spec:",
                "related:a:Related:",
                "example:a:Examples:",
                "side:a:Valid on side:"
        ]
    }
}